--- a/Utils-Webscrapping/webscrapping.ipynb
+++ b/Utils-Webscrapping/webscrapping.ipynb
@@ -75,6 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para limpiar texto, eliminando espacios, saltos de página y tabulaciones. \n",
     "def limpiar_resultado(resultado):\n",
     "    resultado = resultado.replace(' ','')\n",
     "    resultado = resultado.replace('\\r','')\n",
@@ -88,6 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creamos una lista de URLs por temporadas donde están todos los partidos\n",
+    "\n",
     "Lista_URLs_finales = ['https://www.bdfutbol.com/es/t/t2000-01.html',\n",
     "'https://www.bdfutbol.com/es/t/t2001-02.html',\n",
     "'https://www.bdfutbol.com/es/t/t2002-03.html',\n",
@@ -112,15 +115,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Lista_URLs_finales = ['https://www.bdfutbol.com/es/t/t2000-01.html']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -133,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para obtener la jornada del partido\n",
     "def jornada(soup):\n",
     "    sopa = soup.find(class_=\"col-md-12 font-weight-bold text-center text-clar pt-1\").text\n",
     "    sopa_limpia = limpiar_resultado(sopa)\n",
@@ -148,6 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para obtener la fecha del partido\n",
     "def fecha(soup):\n",
     "    sopa = soup.find(class_=\"col-md-12 font-weight-bold text-center text-clar pt-1\").text\n",
     "    sopa_limpia = limpiar_resultado(sopa)\n",
@@ -170,6 +166,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para obtener el resultado del partido\n",
+    "\n",
     "def resultado(soup):\n",
     "    marcador = soup.find(class_='row align-self-center text-dark').text\n",
     "    resultado = limpiar_resultado(marcador)\n",
@@ -189,6 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para obtener el equipo local del partido\n",
+    "\n",
     "def equipo_local(soup):\n",
     "    equipo =  soup.find(class_='col text-blanc partit-equip').text\n",
     "    equipo = equipo.replace(' ','')\n",
@@ -203,6 +203,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para obtener el equipo visitante del partido\n",
+    "\n",
     "def equipo_visitante(soup):\n",
     "    equipo =  soup.find(class_='col text-blanc partit-equip text-right').text\n",
     "    equipo = equipo.replace(' ','')\n",
@@ -224,6 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Funcion para obtener el arbitro del partido\n",
+    "\n",
     "def arbitro(soup):\n",
     "    arbitro =  soup.find(class_=\"col-sm-4 d-none d-sm-block text-clar\").text\n",
     "    pattern = re.compile(r'\\s.*\\s?$')\n",
@@ -280,13 +284,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Todo el dato"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -300,6 +297,7 @@
     "    long = len(x.find_all('div'))\n",
     "    for i in range(long):\n",
     "        frase = x.find_all('div')[i].text\n",
+    "        \"\"\" Pattern indica el minuto de gol que puede ser de un dígito, dos o 90 +digito y comilla al final\"\"\"\n",
     "        pattern = re.compile(r\"\\d\\d?(\\W\\d)?'\")\n",
     "        match = re.search(pattern, frase)\n",
     "        mins = match.group(0)\n",
@@ -308,7 +306,7 @@
     "            gole = 'Propia Puerta'\n",
     "            goleadores.append(gole)\n",
     "        else:\n",
-    "            #pattern1 = re.compile(r'[a-zA-Z]\\w*\\s?')\n",
+    "            \"\"\"pattern1 tiene código regex que dice letra alfanumérica seguido de varios y un espacio y opcionalmente tendrá dos palabras\"\"\"\n",
     "            pattern1 = re.compile(r'[a-zA-Z]\\w*\\s([a-zA-Z]\\w*\\s)?')\n",
     "            match = re.search(pattern1, frase)\n",
     "            gole = match.group(0)\n",
@@ -385,6 +383,10 @@
    "outputs": [],
    "source": [
     "def crear_target(df):\n",
+    "    \"\"\" Funcion crear_target se emplea para crear una nueva columna en df que indique resultado final del partido entre Local (L),\n",
+    "        Visitante (V) o Empate.\n",
+    "    df: dataframe \n",
+    "    \"\"\"\n",
     "    Target = []\n",
     "    for a in range(len(df)): \n",
     "        if df.loc[a,'Goles Local'] > df.loc[a,'Goles Visitante']:\n",
@@ -539,6 +541,9 @@
    "outputs": [],
    "source": [
     "def crear_tabla_modelo1(df,nombre,tipo):\n",
+    "    \"\"\" Este te genera una clasificación por equipo según el dato que quieras, la clasificación total, clasificación como Local, como visitante, etc.\n",
+    "        nombre: Equipo\n",
+    "        tipo: tipo de clasificación\"\"\"\n",
     "    equipo = []\n",
     "    team = str(nombre)\n",
     "    if tipo == 'IdayVuelta':\n",
@@ -626,6 +631,11 @@
    "outputs": [],
    "source": [
     "def puntuacion_equipo_modelo2(df,tipom1, tipom2):\n",
+    "    \"\"\"Aquí se producen los dataframes con las clasificaciones que se buscan donde:\n",
+    "        df: dataframe a iterar\n",
+    "        tipom1: tipo de clasificación\n",
+    "        tipom2: Si es acumulativa (clasificacion) o no\"\"\"\n",
+    "    \n",
     "    lista_equipos = []\n",
     "    lista_puntos = []\n",
     "    for a in df['Equipo Local'].unique():\n",
@@ -659,6 +669,10 @@
    "outputs": [],
    "source": [
     "def crear_tabla_ranking(tabla_clasificacion):\n",
+    "    \"\"\" Se crea un diccionario con las clasificaciones de los equipos por jornada.\n",
+    "        orden.index posee el orden de los equipos del primero al último, luego se\n",
+    "        zipera con el ranking con el resto de jornadas.\n",
+    "        tabla_clasificación es la tabla con los puntos por equipo en cada jornada.\"\"\"\n",
     "    orden_n = []\n",
     "    ranking = np.arange(1,21)\n",
     "    for column in tabla_clasificacion: \n",
@@ -679,6 +693,8 @@
    "outputs": [],
    "source": [
     "def crear_tabla_racha(tabla):\n",
+    "    \"\"\" Creamos una tabla con los puntos realizados en cada equipo por jornada. \n",
+    "    Con la funcion rolling conseguimos obtener el acumulado cada 5 jornadas\"\"\"\n",
     "    puntuaciones_jornada_tran = tabla.transpose()\n",
     "    racha_5 = pd.DataFrame(puntuaciones_jornada_tran.rolling(5).sum())\n",
     "    tabla_racha = racha_5.transpose()\n",
@@ -692,6 +708,11 @@
    "outputs": [],
    "source": [
     "def crear_listas_dataframe(dataframe, campo, nombre_tabla):\n",
+    "    \"\"\" Creamos una lista que insertaremos a modo de columna con la información que queremos de cada tabla\n",
+    "    y lo insertamos en nuestro dataframe.\n",
+    "    dataframe: df\n",
+    "    campo: Columna que queremos obtener el nombre del equipo\n",
+    "    nombre_tabla: Tabla de donde queremos extraer la información\"\"\"\n",
     "    lista_tabla = []\n",
     "    for a in range(len(dataframe)):\n",
     "        jornada = dataframe.loc[a,'Jornada']\n",
@@ -825,31 +846,6 @@
     "            lista_promedio.append(round(promedio,3))\n",
     "        elif indice != -1:\n",
     "            promedio = x.iloc[indice,3]\n",
-    "            lista_promedio.append(round(promedio,3))\n",
-    "\n",
-    "\n",
-    "    return lista_promedio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crear_lista_portres(df,tipo1,columna): \n",
-    "    lista_promedio = []\n",
-    "    for a in range(len(df)):\n",
-    "        arbitro_partido = df.loc[a,columna]\n",
-    "        fecha_partido = df.loc[a,'Fecha']\n",
-    "        tarjetas, fechas = crear_tabla_modeloprom(df,arbitro_partido,tipo1)\n",
-    "        x = crear_tabla_tarjetas(tarjetas, fechas)\n",
-    "        indice = x.index[x['Fechas']==fecha_partido][0]-1\n",
-    "        if indice == -1:\n",
-    "            promedio = 0\n",
-    "            lista_promedio.append(round(promedio,3))\n",
-    "        elif indice != -1:\n",
-    "            promedio = x.iloc[indice,1]/x.iloc[indice,4]\n",
     "            lista_promedio.append(round(promedio,3))\n",
     "\n",
     "\n",
